# osipi

./: .gitignore  PRD.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yaml  pre-commit.yaml  release.yaml
docs/: contributing.md  gen_config_docs.py  gen_ref_pages.py  index.md
docs/explanation/: architecture.md  asl-physics.md  dsc-deconvolution.md  index.md  ivim-theory.md  osipi-standards.md  pharmacokinetic-models.md  xp-abstraction.md
docs/how-to/: add-asl-quantification-model.md  add-bbb-asl-model.md  add-deconvolution-method.md  add-pharmacokinetic-model.md  choose-population-aif.md  enable-gpu-acceleration.md  export-bids.md  fit-multiple-models.md  handle-fitting-failures.md  index.md  load-perfusion-data.md  run-complete-pipeline.md  run-pipeline-cli.md  use-custom-aif.md  visualize-parameter-maps.md
docs/javascripts/: details-close.js  mathjax.js
docs/reference/: index.md  vendor-dicom-tags.md
docs/scripts/: gen_physics_figures.py
docs/stylesheets/: extra.css
docs/tutorials/: asl-analysis.md  dce-analysis.md  dsc-analysis.md  getting-started.md  index.md  ivim-analysis.md
osipy/: __init__.py  _version.py
osipy/asl/: __init__.py
osipy/asl/calibration/: __init__.py  base.py  m0.py  registry.py
osipy/asl/labeling/: __init__.py  schemes.py
osipy/asl/quantification/: __init__.py  att_base.py  att_registry.py  base.py  binding.py  cbf.py  multi_pld.py  registry.py
osipy/cli/: __init__.py  config.py  main.py  runner.py  wizard.py
osipy/common/: __init__.py  caching.py  dataset.py  exceptions.py  logging.py  parameter_map.py  types.py
osipy/common/aif/: __init__.py  base.py  base_detector.py  delay.py  detection.py  detection_registry.py  population.py
osipy/common/backend/: __init__.py  array_module.py  batch.py  config.py  convolution.py
osipy/common/convolution/: __init__.py  conv.py  deconv.py  expconv.py  fft.py  matrix.py  registry.py
osipy/common/fitting/: __init__.py  base.py  batch.py  bayesian.py  least_squares.py  registry.py  result.py
osipy/common/io/: __init__.py  bids.py  dicom.py  load.py  nifti.py
osipy/common/io/converters/: __init__.py  dcm2niix.py
osipy/common/io/metadata/: __init__.py  defaults.py  mapper.py  prompter.py  validator.py
osipy/common/io/vendors/: __init__.py  base.py  detection.py  ge.py  philips.py  siemens.py
osipy/common/models/: __init__.py  base.py  fittable.py
osipy/common/signal/: __init__.py  baseline.py  filtering.py
osipy/common/validation/: __init__.py  comparison.py  report.py
osipy/common/visualization/: __init__.py  curves.py  maps.py
osipy/dce/: __init__.py  fitting.py
osipy/dce/concentration/: __init__.py  registry.py  signal_to_conc.py
osipy/dce/models/: __init__.py  base.py  binding.py  extended_tofts.py  patlak.py  registry.py  tofts.py  two_compartment.py  two_compartment_uptake.py
osipy/dce/t1_mapping/: __init__.py  binding.py  look_locker.py  models.py  registry.py  vfa.py
osipy/dsc/: __init__.py  normalization.py
osipy/dsc/arrival/: __init__.py  base.py  registry.py
osipy/dsc/concentration/: __init__.py  gamma_model.py  signal_to_conc.py
osipy/dsc/deconvolution/: __init__.py  base.py  registry.py  signal_model.py  svd.py  svd_fitters.py
osipy/dsc/leakage/: __init__.py  base.py  correction.py  registry.py
osipy/dsc/parameters/: __init__.py  maps.py
osipy/ivim/: __init__.py
osipy/ivim/fitting/: __init__.py  bayesian_ivim.py  estimators.py  registry.py
osipy/ivim/models/: __init__.py  biexponential.py  binding.py  registry.py
osipy/pipeline/: __init__.py  asl_pipeline.py  dce_pipeline.py  dsc_pipeline.py  ivim_pipeline.py  runner.py
scripts/: generate_osipi_reference.py
tests/: compliance_figures.py  conftest.py
tests/fixtures/: README.md
tests/fixtures/osipi_codecollection/: README.md  __init__.py  dce_csv_loader.py  dsc_csv_loader.py
tests/fixtures/osipi_codecollection/dce/: 2cum.json  2cxm.json  extended_tofts.json  patlak.json  tofts.json
tests/fixtures/osipi_dro/: MANIFEST.md
tests/fixtures/osipi_dro/asl/: att.npy  cbf.npy  m0.npy  plds.npy
tests/fixtures/osipi_dro/dsc/: aif.npy  cbf.npy  cbv.npy  mask.npy  mtt.npy  time.npy
tests/fixtures/osipi_dro/ivim/: b_values.npy  d.npy  d_star.npy  f.npy
tests/integration/: test_asl_pipeline.py  test_cli_localdata.py  test_convolution_integration.py  test_dce_pipeline.py  test_dsc_pipeline.py  test_gpu_equivalence.py  test_ivim_pipeline.py  test_pipeline.py  test_reproducibility.py
tests/unit/asl/: test_buxton.py  test_m0.py
tests/unit/cli/: test_config.py  test_runner_dicom.py  test_wizard.py
tests/unit/common/: test_aif.py  test_aif_detector_registry.py  test_base_component.py  test_baseline.py  test_bids.py  test_caching.py  test_curves.py  test_dataset.py  test_dicom.py  test_fitter_registry.py  test_fitting.py  test_maps.py  test_nifti.py  test_types.py  test_validation.py
tests/unit/common/backend/: __init__.py  test_array_module.py  test_batch.py  test_config.py  test_convolution.py  test_gpu_benchmark.py  test_gpu_equivalence.py
tests/unit/common/convolution/: __init__.py  test_accuracy.py  test_conv.py  test_deconv.py  test_expconv.py  test_matrix.py
tests/unit/common/io/: __init__.py  test_bids_loading.py  test_load_perfusion.py  test_metadata.py  test_vendors.py
tests/unit/dce/: test_concentration.py  test_concentration_registry.py  test_fitting.py  test_models.py  test_t1_mapping.py  test_t1_registry.py
tests/unit/dsc/: __init__.py  test_bsw.py  test_concentration.py  test_deconvolution.py  test_osipi_dsc.py
tests/unit/ivim/: test_bayesian_ivim.py  test_ivim.py  test_ivim_fitter_registry.py
