[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osipy"
dynamic = ["version"]
description = "OSIPI-compliant MRI perfusion analysis library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "osipy contributors" },
]
keywords = [
    "mri",
    "perfusion",
    "dce",
    "dsc",
    "asl",
    "ivim",
    "medical-imaging",
    "osipi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
    "nibabel>=5.2.0",
    "pydicom>=2.4.0",
    "pybids>=0.16.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "idc-index>=0.11.7",
    # interactive
    "plotly>=5.18.0",
    # dev / testing / linting
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "sphinx>=7.2.0",
    "numpydoc>=1.6.0",
    "licensecheck>=2025.1.0",
    "pip-licenses>=5.5.1",
    # docs
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0.0",  # GPU acceleration via CuPy (CUDA 12.x)
]

[project.urls]
Homepage = "https://github.com/osipy/osipy"
Documentation = "https://osipy.readthedocs.io"
Repository = "https://github.com/osipy/osipy"

[project.scripts]
osipy = "osipy.cli.main:main"

[tool.hatch.version]
path = "osipy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["osipy"]

# T003: pytest, pytest-cov, and hypothesis configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "dro: marks tests that require OSIPI DRO fixtures",
    "localdata: marks tests that require local data in data/ (run with '-m localdata')",
    "generate_figures: generate compliance figures in output/compliance/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:More than 20 figures have been opened:RuntimeWarning",
]

[tool.coverage.run]
source = ["osipy"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 95
show_missing = true

# T004: mypy strict mode configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "nibabel.*",
    "pydicom.*",
    "bids.*",
    # scipy.* removed - scipy is BANNED for numerical operations
    "matplotlib.*",
    "numba.*",
    "plotly.*",
    "cupy.*",  # CuPy for GPU acceleration
    "cupyx.*",  # CuPy scipy-compatible interfaces (if ever needed)
]
ignore_missing_imports = true

# T005: ruff linter and formatter configuration
[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle
]
ignore = [
    # --- Global (style preferences) ---
    "D100",   # Missing docstring in public module
    "E501",   # Line too long (formatter handles what it can)
    "RUF001", # Ambiguous unicode character in string (scientific notation)
    "RUF002", # Ambiguous unicode character in docstring (Greek letters)
    "RUF003", # Ambiguous unicode character in comment
    "UP038",  # Use X | Y in isinstance (deprecated rule, tuple form is fine)
]

[tool.ruff.lint.per-file-ignores]
# Tests: relax docstrings, unused args, and legacy numpy random
"tests/**" = [
    "D",      # No docstring requirements in tests
    "ARG",    # Unused arguments common in fixtures/mocks
    "E402",   # Import order (conftest, conditional imports)
    "NPY002", # Legacy np.random calls (test helpers)
]
# Source: relax rules for ABCs/protocols and conditional imports
"osipy/**" = [
    "D401",   # First line should be in imperative mood
    "ARG001", # Unused function argument (ABCs/protocols)
    "ARG002", # Unused method argument (ABCs/protocols)
    "E402",   # Module level import not at top of file
]
# Examples/scripts/docs: relaxed docstring and style rules
"examples/**" = [
    "D",      # No docstring requirements in examples
    "ARG001", # Unused arguments in example callbacks
    "NPY002", # Legacy np.random calls
]
"scripts/**" = [
    "D",      # No docstring requirements in scripts
    "NPY002", # Legacy np.random calls
]
"docs/**" = [
    "D",      # No docstring requirements in doc scripts
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["osipy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

